--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <script>
       // You can also require other files to run in this process
+      window.$=window.jQuery=require('jquery');
+      console.log(window.$);
       require('./renderer.js')
     </script>
   </body>
