--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
+    <style>body { -webkit-app-region: drag; }</style>
   </head>
   <body>
     <h1>Hello World!</h1>
