--- a/index.html
+++ b/index.html
@@ -3,14 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <style>body { -webkit-app-region: drag; }</style>
+    <style>h1 { -webkit-app-region: drag; margin: 0; cursor: pointer; top: 0; color: white; background: #333; left: 0; width: 100%; position: fixed; padding: 0 10px; text-align: center; }</style>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <h1>Titlebar!</h1>
 
     <script>
       // You can also require other files to run in this process
